I fixed the overflow scroll vs visible problem with the sidebargit statusgit status

--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -14,11 +14,11 @@
   max-width:250px;
   z-index:100px;
 
-  overflow:visible;
+  overflow-y: scroll;
+  overflow-x: hidden;
 
   border-left: 5px solid #919191;
   background-color:#DEDEDE;
-  display:inline-block;
 
 }
 
